--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
+/*------------------------------------------
+* Tela de LOADING && Transições. (adicionar web-kits na proxima versão)
+* @author: David
+*------------------------------------------*/
+
+#loading {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    opacity: 1;
+    z-index: -1;
+    background-color: #212529;
+    transition: opacity .75s;
+}
+#loading.load {
+    opacity: 0;
+}
+
+#main {
+    opacity: 0;
+    transition: opacity .75s;
+}
+#main.load {
+    opacity: 1;
+}
+
+/* .menuonload {
+    margin-top: -100px;
+    opacity: 0;
+    transition-property: all;
+    transition-duration: 1s!important;
+    transition-delay: .5s!important;
+}
+.menuonload.load {
+    margin-top: 0;
+    opacity: 1;
+} */
+
+
+/*------------------------------------------
+* Responsividade do painel principal.
+* @author: David
+*------------------------------------------*/
+
 #intro {
     position:absolute;
     top:50%;
@@ -32,5 +76,60 @@
 
     #futuro {
         font-size: 30px;
+    }
+}
+
+/*------------------------------------------
+* Circulo da tela de LOADING. (adicionar web-kits na proxima versão)
+* @author: David
+*------------------------------------------*/
+
+#border{
+    background-color: #ffc107;
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    position: fixed;
+    left: 50%;
+    top: 40%;
+    margin-left: -50px;
+    padding: 1px;
+    animation-name: infinitRotation;
+    animation-timing-function: linear;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+#circle {
+    background-color: #212529;
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    animation-name: infinitBounce;
+    animation-timing-function: linear;
+    animation-duration: .7s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes infinitRotation {
+    from {
+        transform: rotate( 0deg );
+    }
+    to {
+        transform: rotate( 360deg );
+    }
+}
+
+@keyframes infinitBounce {
+    0% {
+        transform: translateY(0);
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateY(10px);
+        transform: translateX(6px);
+    }
+    100% {
+        transform: translateY(0);
+        transform: translateX(0);
     }
 }
