--- a/css/agency.css
+++ b/css/agency.css
@@ -307,7 +307,7 @@ header.masthead .intro-text .intro-heading {
   max-width: 100vw;
 }
 
-.portfolio-modal .modal-content {
+portfolio-modal .modal-content {
   padding: 100px 0;
   text-align: center;
 }
@@ -341,6 +341,42 @@ header.masthead .intro-text .intro-heading {
   cursor: pointer;
 }
 
+.portfolio-modal .close-modal {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  width: 75px;
+  height: 75px;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.portfolio-modal .close-modal:hover {
+  opacity: 0.3;
+}
+
+.portfolio-modal .close-modal .lr {
+  /* Safari and Chrome */
+  z-index: 1051;
+  width: 1px;
+  height: 75px;
+  margin-left: 35px;
+  /* IE 9 */
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  background-color: #212529;
+}
+
+.portfolio-modal .close-modal .lr .rl {
+  /* Safari and Chrome */
+  z-index: 1052;
+  width: 1px;
+  height: 75px;
+  /* IE 9 */
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  background-color: #212529;
+}
 .portfolio-modal .close-modal {
   position: absolute;
   top: 25px;
